allcharts/templates/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-server
  name: api-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-server
  strategy: {}
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - image: theanantshukla/k8stestbackend:latest
        name: api-server
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 3001
