allcharts/templates/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend-react
  name: frontend-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-react
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend-react
    spec:
      containers:
      - image: theanantshukla/k8stestfrontend:latest
        name: frontend-react
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 80
