allcharts/templates/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  labels:
    run: api-server
spec:
  ports:
  - port: 3001
    protocol: TCP
  selector:
    app: api-server
  type: ClusterIP
