allcharts/templates/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
  labels:
    run: frontend-react
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-react
  type: ClusterIP
