allcharts/templates/service-socket.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-server
  labels:
    run: socket-server
spec:
  ports:
  - port: 3002
    protocol: TCP
  selector:
    app: socket-server
  type: ClusterIP
