allcharts/templates/ingress-controller-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.anantshukla.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-react
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api-server
            port:
              number: 3001
